--- a/Docker compose/docker-compose.yml
+++ b/Docker compose/docker-compose.yml
@@ -79,12 +79,13 @@ services:
       - zookeeper
     ports:
       - 9092:9092
+      - 29093:29093
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENERS: INTERNAL://:29092,EXTERNAL://:9092
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://localhost:29092,EXTERNAL://${DOCKER_HOST_IP}:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_LISTENERS: INTERNAL://:29092,EXTERNAL://:9092,EXTERNAL_SAME_HOST://:29093
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://localhost:29092,EXTERNAL://${DOCKER_HOST_IP}:9092,EXTERNAL_SAME_HOST://localhost:29093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,EXTERNAL_SAME_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
   nifi:
@@ -127,7 +128,7 @@ services:
       interval: 5s
       retries: 100
     ports:
-    - 50070:50070
+    - 8021:50070
     - 8020:8020
 
   datanode:
@@ -144,6 +145,6 @@ services:
       interval: 5s
       retries: 100
     ports:
-     - 50075:50075
-     - 50010:50010
+     - 8082:50075
+     - 8083:50010
 ...
